1998-06-11  Alex Lancaster  <alex@santafe.edu>

	* set.sgml (entity): Included versions.ent, figs.ent and updated
	all entity references to be consistent with filenames.

1998-06-09  Alex Lancaster  <alex@santafe.edu>

	* setmeta.sgml: Used global SFI entity 'corpauthor' in CORPAUTHOR
	SGML tag.

1998-06-08  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* set.sgml: Use public identifiers (file renamed from set.sgml.in).

1998-05-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* set.sgml.in: Make ID of set be "set".

	* set.sgml.in, set.tex.in: New files.

	* Makefile.am: New file.

	* Makefile: Remove.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Begin revision log.
